# DjangoBlog

./: .coveragerc  .dockerignore  .env  .env.example  .env.production.example  .flake8  .gitignore  .pre-commit-config.yaml  =3.21.0  =4.0.0  =4.5.0  BACKEND_OPTIMIZATION_PLAN.md  BACKEND_OPTIMIZATION_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  DEPLOYMENT.md  ENV_SETUP_README.md  FRONTEND_OPTIMIZATION_PLAN.md  LAN_ACCESS.md  LICENSE  Makefile  NEW_TOOLS.md  PROJECT_CHECKLIST.md  PR_TEMPLATE.md  README.md  SECURITY.md  TECHNICAL_AUDIT_REPORT.md  TEST_REPORT.md  TOOLS_OPTIMIZATION_REPORT.md  UI_DESIGN_PLAN.md  UI_FINAL_REPORT.md  UI_PROGRESS.md  conftest.py  create_test_data.py  deploy.sh  execute_fix.sh  gunicorn.conf.py  install.bat  install.sh  (+24 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  scheduled.yml
.learnings/: ERRORS.md  FEATURE_REQUESTS.md  LEARNINGS.md
apps/accounts/: admin.py  avatar_utils.py  captcha.py  forms.py  models.py  tests.py  urls.py  views.py
apps/api/: __init__.py  apps.py  exception_handler.py  moderation_views.py  response.py  search_views.py  serializers.py  urls.py  views.py
apps/blog/: admin.py  apps.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
apps/core/: admin.py  cache_optimizer.py  connection_monitor.py  context_processors.py  csp_nonce.py  error_codes.py  log_filters.py  maintenance_tasks.py  models.py  performance.py  performance_middleware.py  rate_limit.py  search.py  security_headers.py  security_middleware.py  tests.py  upload_tasks.py  upload_views.py  urls.py  utils.py  validators.py  views.py  views_counter.py  views_middleware.py
apps/forum/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
apps/install/: apps.py  forms.py  middleware.py  tests.py  urls.py  views.py
apps/notifications/: __init__.py  admin.py  api_views.py  apps.py  consumers.py  models.py  routing.py  services.py  urls.py
apps/tools/: admin.py  apps.py  base_tool.py  categories.py  forms.py  models.py  registry.py  tests.py  urls.py  views.py
config/: asgi.py  celery.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  development.py  production.py  test.py
deploy/: .dockerignore  .env.docker.example  .env.example  DEPLOYMENT.md  Dockerfile  FIX_PLAN.md  auto-deploy.sh  backup.sh  bench.sh  check-local-db-cache.bat  check_db_conn.py  crontab.example  deploy-notes.md  deploy.ps1  deploy.sh  docker-compose.yml  down.bat  down.sh  fix-fnnas.sh  gunicorn.conf.py  gunicorn.service.example  health.ps1  health.sh  install-security-tools.ps1  install-security-tools.sh  nginx.conf  nginx.conf.example  nginx.generic.conf  perf-gate.bat  perf-gate.sh  precheck.bat  precheck.sh  register-startup-task.ps1  restore.sh  start-local-db-cache.bat  start-local-db-cache.ps1  supervisor.conf.example  test-gate.bat  test-gate.sh  up.bat  (+1 more)
deploy/backups/: test_backup.sql
deploy/perf/: k6_smoke.js  k6_stress.js
docs/: ADMIN_UI_REFACTOR_PLAN.md  API.md  AUDIT_REPORT_API接口_2026-04-14.md  AUDIT_REPORT_P3优化_2026-04-14.md  AUDIT_REPORT_博客核心_2026-04-13.md  AUDIT_REPORT_博客系统_2026-04-14.md  AUDIT_REPORT_后台管理_2026-04-14.md  AUDIT_REPORT_在线工具箱_2026-04-14.md  AUDIT_REPORT_性能优化_2026-04-14.md  AUDIT_REPORT_搜索与首页_2026-04-14.md  AUDIT_REPORT_用户中心_2026-04-14.md  AUDIT_REPORT_用户系统_2026-04-13.md  AUDIT_REPORT_社区论坛_2026-04-14.md  AUDIT_REPORT_评论系统_2026-04-14.md  AUDIT_REPORT_通知系统_2026-04-14.md  AUDIT_REPORT_部署配置_2026-04-14.md  CONFIGURATION.md  DECISIONS.md  DEEP_AUDIT_REPORT_P0-P3_2026-04-14.md  DEEP_AUDIT_REPORT_所有修复_2026-04-13.md  DEPLOYMENT.md  FINAL_AUDIT_REPORT_2026-04-14.md  FRONTEND_AUDIT_REPORT.md  Git更新指南.md  LICENSE  OPTIMIZATION_PLAN.md  P0_P3_AUDIT_REPORT_2026-04-14.md  PERFORMANCE.md  PERFORMANCE_DEEP.md  PROJECT_AUDIT_2026.md  PROJECT_EVALUATION.md  PROJECT_EVALUATION_2026-04-09.md  PROJECT_NOTE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  RELEASE_CHECKLIST.md  SECURITY_BASELINE.md  SYSTEM_DEPENDENCIES.md  SYSTEM_TEST_REPORT.md  (+140 more)
moderation/: admin.py  ai_service.py  apps.py  baidu_moderation.py  constants.py  models.py  reputation.py  services.py  strategy.py  tasks.py  tests.py  urls.py  utils.py  views.py
moderation/migrations/: 0001_initial.py  0002_sensitiveword.py  0003_alter_moderationlog_action_moderationadmin_and_more.py  0004_sensitiveword_category_sensitiveword_is_active_and_more.py  0005_userreputation_reputationlog.py  0006_alter_moderationadmin_options_and_more.py  __init__.py
requirements/: base.txt  development.txt  production.txt
screenshots/: README.md
scripts/: README.md  VERIFICATION.md  init_default_data.py  manage_project.py  migrate_to_mysql.py  optimize_static.sh  run.py  run_tests.py  safe_update.bat  set_beian_footer.py  start.py  start_server.sh  stop_server.sh  脚本代码作用总览.md  脚本说明.md
static/: robots.txt
static/css/: admin-editor.css  admin-modern.css  site.css  tech-theme.css  tools-modern.css  ui-modern.css
static/js/: admin-editor.js  admin-gongan-beian.js  captcha-refresh.js  comment-like.js  editor-init.js  gitignore-generator.js  ip-detector.js  json-formatter-enhanced.js  json-formatter.js  moderation-api-client.js  nat-detector.js  post-editor.js  reply-like.js  site.js  tech-effects.js  tool-search.js  ui-toast.js  upload-async-client.js  utils.js
templates/: 404.html  500.html  base.html  base_tech.html  home.html  home_tech.html
templates/accounts/: lockout.html  login.html  login_tech.html  profile.html  profile_edit.html  register.html  register_tech.html
templates/admin/: app_index_tech.html  base_site.html  index.html  (+4 more)
tests/: README.md  conftest.py  requirements.txt  test_article.py  test_auth.py  test_blog.py  test_complete.py  test_core_backend_suite.py  test_core_backend_suite_auth.py  test_core_backend_suite_ext.py  test_core_backend_suite_ops.py  test_deep.py  test_final.py  test_functional.py  test_like.py  test_moderation_smoke.py  test_p2_smoke.py  test_post.py  test_register.py  test_security.py  test_smoke_backend.py  test_tools.py  测试说明.md
(+193 files in other folders)
