[project]
name = "djangoblog"
version = "2.4.0"
description = "Django 4.2 博客论坛系统，集成智能审核、85+在线工具、WebSocket实时通知、全文搜索"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "zhang123999-qq"}
]
keywords = ["django", "blog", "forum", "python"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

dependencies = [
    "Django>=4.2,<5.0",
    "django-environ>=0.11.0",
    "django-axes>=7.0.0",
    "PyMySQL>=1.1.0",

    "celery>=5.4",
    "redis>=5.2",
    "django-redis>=5.4",
    "hiredis>=2.0",

    "djangorestframework>=3.14.0",
    "django-filter>=23.0",
    "drf-spectacular>=0.27.0",

    "django-allauth>=65.15.1",
    "django-ckeditor>=6.7.0",
    "django-compressor>=4.5.0",

    "Pillow>=10.0.0",
    "markdown>=3.7",
    "bleach>=6.2.0",

    "requests>=2.32.0",
    "qrcode>=8.0",
    "pycryptodome>=3.21.0",
    "cryptography>=42.0.0",
    "pyzbar>=0.1.9",
    "jsonpath-ng>=1.6.0",
    "faker>=20.0.0",
    "croniter>=2.0.0",
    "python-barcode>=0.15.0",

    "django-el-pagination>=4.1.0",
    "django-taggit>=6.1.0",
    "django-meta>=2.4.0",
    "python-json-logger>=3.3.0",
    "django-cors-headers>=4.7.0",
    "python-slugify>=8.0.0",
    "django-mptt>=0.16.0",

    "baidu-aip>=4.16",
    "gevent>=24.0",  # Gunicorn 异步 worker 必需
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.10",
    "pytest-playwright>=0.7",
    "playwright>=1.40",
    "black>=25.1",
    "flake8>=7.1",
    "mypy>=1.15",
    "types-requests>=2.32.0",
    "types-Markdown>=3.7.0",
    "types-bleach>=6.2.0",
    "types-croniter>=6.0.0",
    "types-PyMySQL>=1.1.0",
    "flower>=2.0",
]
prod = [
    "gunicorn>=23.0",
    "uvicorn[standard]>=0.34",
    "whitenoise>=6.9",
    "sentry-sdk>=2.22",
    "flower>=2.0",
]

[project.urls]
Homepage = "https://github.com/zhang123999-qq/DjangoBlog"
Repository = "https://github.com/zhang123999-qq/DjangoBlog"
Documentation = "https://github.com/zhang123999-qq/DjangoBlog#readme"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "apps.core.migrations.*",
    "apps.tools.migrations.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["apps.core.admin"]
disable_error_code = ["attr-defined"]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"
