[metadata]
name = djangoblog
version = 2.3.2
description = Django 4.2 博客论坛系统
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zhang123999-qq/DjangoBlog
author = zhang123999-qq
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 4.2
    Programming Language :: Python :: 3.13

[options]
python_requires = >=3.10
packages = find:
include_package_data = true
install_requires =
    Django>=4.2
    django-environ>=0.12
    Pillow>=11.1
    requests>=2.32

[options.extras_require]
dev =
    pytest>=8.3
    black>=25.1
    flake8>=7.1
prod =
    gunicorn>=23.0
    uvicorn[standard]>=0.34

[flake8]
max-line-length = 140
extend-ignore =
    E203,
    W503
exclude =
    .git,
    __pycache__,
    .venv,
    migrations,
    djangoblog.egg-info,
    staticfiles,
    .pytest_cache,
    .mypy_cache,
    tmp*.py
per-file-ignores =
    config/settings/development.py:F403,F405
    config/settings/production.py:F403,F405
    apps/core/admin.py:E402,E302
    tests/test_complete.py:E402,E302,E305,F401,F824,F541
    tests/test_deep.py:E402,F401,F541
    tests/test_final.py:E402,E302,E305,F401,F824
    tests/test_functional.py:E402,E302,E305
    tests/test_tools.py:E402,E302,E305,F401,F824,E501
